--- a/FridgeMeal/app/src/main/res/values/strings.xml
+++ b/FridgeMeal/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FridgeMeal</string>
+    <string name="loginbutton">Login</string>
+    <string name="signupbutton">Sign Up</string>
 </resources>
