--- a/FridgeMeal/app/src/main/res/values/strings.xml
+++ b/FridgeMeal/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">FridgeMeal</string>
     <string name="loginbutton">Login</string>
     <string name="signupbutton">Sign Up</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
